--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ header{
 .header-text h1{
 color: white;
 }
+.img2.JPG{
+    width: 100%;
+    height: 50%;
+}
 .col-lg-8 p{
     text-align: left;
 }
